@@ -16,15 +16,16 @@
 package process
 
 import (
+	"io"
+	"io/ioutil"
+	"time"
+
 	. "github.com/mozilla-services/heka/pipeline"
 	pipeline_ts "github.com/mozilla-services/heka/pipeline/testsupport"
 	"github.com/mozilla-services/heka/pipelinemock"
 	plugins_ts "github.com/mozilla-services/heka/plugins/testsupport"
 	"github.com/rafrombrc/gomock/gomock"
 	gs "github.com/rafrombrc/gospec/src/gospec"
-	"io"
-	"io/ioutil"
-	"time"
 )
 
 func ProcessInputSpec(c gs.Context) {
@@ -78,6 +79,7 @@ func ProcessInputSpec(c gs.Context) {
 			ith.MockInputRunner.EXPECT().NewDeliverer("stdout").Return(ith.MockDeliverer)
 			ith.MockInputRunner.EXPECT().NewSplitterRunner("stdout").Return(
 				ith.MockSplitterRunner)
+			ith.MockSplitterRunner.EXPECT().Done()
 
 			c.Specify("reads a message from ProcessInput", func() {
 				pInput.SetName("SimpleTest")
@@ -161,6 +163,7 @@ func ProcessInputSpec(c gs.Context) {
 			ith.MockInputRunner.EXPECT().NewDeliverer("stderr").Return(ith.MockDeliverer)
 			ith.MockInputRunner.EXPECT().NewSplitterRunner("stderr").Return(
 				ith.MockSplitterRunner)
+			ith.MockSplitterRunner.EXPECT().Done()
 
 			c.Specify("handles bad arguments", func() {
 				pInput.SetName("BadArgs")
